--- a/MODULO02/EX021/style.css
+++ b/MODULO02/EX021/style.css
@@ -1,20 +1,36 @@
 @charset "UTF-8";
 
-h1 {
+h1 { /* box-level */
     background-color: dimgray;
     height: 300px;
     width: 300px;
+    /*
     border-width: 6px;
     border-style: solid;
-    border-color: darkgray;
+    border-color: darkgray; */
 
+    border: 10px solid darkgray; /* SIMPLIFICANDO O EXEMPLO DE CIMA */
+
+    /*
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 10px; */
+
+    padding: 10px; /* SIMPLIFICANDO O EXEMPLO DE CIMA / SE OS 4 VALORES FOREM IGUAIS É POSSIVEL SIMPLIFICAR APENAS COM 1 VALOR.  */
+
+    /*
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px; */
+
+    margin: 20px auto 40px auto;
+
+    outline: 5px dashed salmon;
 }
 
-a {
+a { /* inline-level */
     border-width: 3px;
     border-style: solid;
     border-color: red;
