--- a/MODULO02/DESAFIO02/estilo/style.css
+++ b/MODULO02/DESAFIO02/estilo/style.css
@@ -39,10 +39,12 @@ header {
 header > h1 {
     color: var(--cor6);
     font-family: var(--fonte-destaque);
+    text-align: center;
 }
 
 header > p {
     color: var(--cor6);
+    text-align: center;
 }
 
 nav {
@@ -50,7 +52,16 @@ nav {
 }
 
 main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
     background-color: var(--cor6);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.349);
+    border-radius: 0px 0px 10px 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 main h1 {
@@ -60,6 +71,16 @@ main h1 {
 
 main h2 {
     font-family: var(--fonte-android);
+}
+
+main img {
+    width: 100%;
+}
+
+main img.pequena {
+    width: 50%;
+    display: block;
+    margin: auto;
 }
 
 footer {
